src/test/deca/syntax/invalid/block/unclosed_brace_empty_10.deca
// Description:
//    Tests a syntactically incorrect program for an empty block with an unclosed brace
//
// Results:
//    Line 10 : Error, unmatched brace, expected a '}'.
//
// History:
//    created on 17/12/2024

{